--- a/slang/src/components/Button/style.scss
+++ b/slang/src/components/Button/style.scss
@@ -2,8 +2,9 @@
   display: flex;
   justify-content: space-between;
   position: fixed;
-  top: 40%;
-  left: 25%;
+  top: calc(50% - 50px);
+  left: 20%;
+  width: 60%;
 }
 .button {
   background-color: black;
@@ -11,9 +12,10 @@
   font-size: 20px;
   padding: 10px 60px;
   border-radius: 5px;
-  margin-left: 100px;
-  margin-right: 100px;
   cursor: pointer;
   width: 200px;
   height: 100px;
+  &:first-child {
+    margin-right: 10px;
+  }
 }
