--- a/slang/src/components/List/style.scss
+++ b/slang/src/components/List/style.scss
@@ -1,3 +1,9 @@
 .slang-list {
   margin-top: 100px;
 }
+.custom-button {
+  background-color: aqua !important;
+  &:hover {
+    background-color: antiquewhite !important;
+  }
+}
