change menu link

--- a/client/src/components/Header/style.scss
+++ b/client/src/components/Header/style.scss
@@ -8,7 +8,7 @@
   background-color: black;
   > .headerName {
     font-weight: bolder;
-    font-style: white;
+    color: white;
   }
 
   > .dropdown {
